# VEX-V5-Brain-Visuals

./: .gitignore  CMakeLists.txt  Makefile  README.md
_codeql_build_dir/: Makefile
include/: api.h
include/auton/: selector.hpp
include/host/: display.hpp  hal.hpp  ipc.hpp
include/liblvgl/: lv_conf.h  lvgl.h
include/pros/: controller.hpp  llemu.hpp  misc.hpp  motors.hpp  rtos.hpp
src/: main.cpp
src/auton/: routines.cpp  selector.cpp
src/host/: display.cpp  hal.cpp  ipc.cpp
src/pros/: controller.cpp  llemu.cpp  misc.cpp  motors.cpp  rtos.cpp
ui/: package.json  server.js
ui/public/: app.js  index.html  styles.css
